first iteration of McXtrace Component manual. mostly a branch from McStas one. added Multilayer elliptic mirror component description from Annette's notes.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@279 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/branches/mcxtrace_1_0/Component_manual.tex
+++ b/branches/mcxtrace_1_0/Component_manual.tex
@@ -161,7 +161,7 @@
 \include{misc}
 
 \appendix
-\include{polarisation}
+% \include{polarisation}
 \include{kernelcalls} % as in manual
 %\include{compcode}   % removed: too heavy !!
 %\include{instcode}
