--- a/branches/mcxtrace_1_0/abstractpage_comp.tex
+++ b/branches/mcxtrace_1_0/abstractpage_comp.tex
@@ -19,13 +19,17 @@ The authors are:
 \begin{quote}
 \label{p:authors}
 \vskip\baselineskip\noindent
-Peter Kj\ae r Willendrup \\
-Materials Research Department, Ris{\o} DTU, Roskilde, Denmark \\
-email: \verb+peter.willendrup@risoe.dk+
-\vskip\baselineskip\noindent
 Erik Knudsen \\
 Materials Research Department, Ris{\o} DTU, Roskilde, Denmark \\
 email: \verb+erik.knudsen@risoe.dk+
+\vskip\baselineskip\noindent
+Andrea Prodi \\
+Niels Bohr Institute, University of Copenhagen, Denmark \\
+email: \verb+aprodi@nbi.ku.dk+
+\vskip\baselineskip\noindent
+Peter Kj\ae r Willendrup \\
+Materials Research Department, Ris{\o} DTU, Roskilde, Denmark \\
+email: \verb+peter.willendrup@risoe.dk+
 \vskip\baselineskip\noindent
 Kim Lefmann \\
 Niels Bohr Institute, University of Copenhagen, Denmark \\
@@ -33,10 +37,10 @@ email: \verb+lefmann@fys.ku.dk+
 %\vskip\baselineskip\noindent
 % Kristian Nielsen \\
 % email: \verb+kristian.nielsen@mail.tele.dk+
-\vskip\baselineskip\noindent
-Emmanuel Farhi \\
-Institut Laue-Langevin, Grenoble, France \\
-email: \verb+farhi@ill.fr+
+% \vskip\baselineskip\noindent
+% Emmanuel Farhi \\
+% Institut Laue-Langevin, Grenoble, France \\
+% email: \verb+farhi@ill.fr+
 % \vskip\baselineskip\noindent
 % Klaus Lieutenant \\
 % Institutt for Energiteknikk, Kjeller, Norway\\
