--- a/branches/mcxtrace_1_0/beamstop.tex
+++ b/branches/mcxtrace_1_0/beamstop.tex
@@ -1,4 +1,4 @@
-\section{Beamstop: A neutron absorbing area}
+\section{Beamstop: A photon absorbing area}
 \label{beamstop}
 \index{Optics!Beam stop}
 
@@ -6,19 +6,17 @@
 
 The component {\bf Beamstop} can be seen as the reverse of
 the {\bf Slit} component.
-It sets up an area at the $z=0$ plane, and propagates the neutrons
-onto this plane (by the kernel call PROP\_Z0).
-Neutrons within this area are ABSORB'ed,
-while all other neutrons are unaffected.
+It sets up an area at the $z=0$ plane. Photons that hit the plane 
+within this area are ABSORB'ed, while all others are unaffected.
 
-By using this component, some neutrons contributing to the background
+By using this component, some photons contributing to the background
 in a real experiment will be neglected.
 These are the ones that scatter off the side
-of the beamstop, or penetrates the absorbing material.
+of the (real) beamstop, or penetrate the absorbing material.
 Further, the holder of the beamstop is not simulated.
 
 {\bf Beamstop} can be either circular or rectangular.
-The input parameters of {\bf Beamstop} are the four coordinates,
+The input parameters of {\bf Beamstop} are either height and width $(x_{width},y_{height})$ or the four coordinates,
 $(x_{\rm min}, x_{\rm max}, y_{\rm min}, y_{\rm max})$
 defining the opening of a rectangle, or the radius $r$ of
 a circle, depending on which parameters are specified.
@@ -27,7 +25,7 @@ If the "direct beam" (e.g. after a monochromator or sample) should not be
 simulated, it is possible to emulate an ideal beamstop 
 so that only the scattered beam is left;
 without the use of {\bf Beamstop}:
-This method is useful for instance in the case where only neutrons 
+This method is useful for instance in the case where only photons 
 scattered from a sample are of interest. 
 The example below removes the direct beam and 
 any background signal from other parts of the instrument
