--- a/branches/mcxtrace_1_0/arm.tex
+++ b/branches/mcxtrace_1_0/arm.tex
@@ -1,5 +1,5 @@
 \section{Arm: The generic component}
-\label{explain:arm}
+\label{s:arm}
 \component{Arm}{System}{(none)}{(none)}{}
 \index{Optics!Point in space (Arm, Optical bench)}
 
@@ -14,4 +14,6 @@ The use of {\rm Arm} components in the instrument definitions
 is not required but is recommended for clarity.
 {\bf Arm} has no input parameters.
 
-The first Arm instance in an instrument definition may be changed into a \verb+Progress_bar+(sec.~\ref{misc:Progress\bar}) component in order to display simulation progress on the fly , and possibly save intermediate results.
+The first Arm instance in an instrument definition may be changed into a
+\verb+Progress_bar+(sec.~\ref{s:progress_bar}) component in order to display
+simulation progress on the fly , and possibly save intermediate results.
