--- a/branches/mcxtrace_1_0/progress_bar.tex
+++ b/branches/mcxtrace_1_0/progress_bar.tex
@@ -1,5 +1,5 @@
 \section{Progress\_bar: Dynamic information output}
-\label{explain:progressbar}
+\label{s:progress_bar}
 \component{Progress\_bar}{System}{(none)}{{\it profile},{\it percent},{\it flag_save},{\it minutes}}{}
 \index{Optics!Progress bar}
 
