--- a/branches/mcxtrace_1_0/datablad.tex
+++ b/branches/mcxtrace_1_0/datablad.tex
@@ -65,8 +65,8 @@ Telefax +45 4677 4013
 \regnummer{---}
 \projektnummer{---}
 \sider{\thepage}\tabeller{12}\figurer{27}\referencer{49}
-\resume{\input{abstract}}
-\deskriptorer{Neutron Instrumentation; Monte Carlo Simulation; Software}
+\resume{\input{abstract_common}}
+\deskriptorer{X-Ray Instrumentation; Monte Carlo Simulation; Software}
 \end{datablad}
 
 }
