--- a/branches/mcxtrace_1_0/datablad_comp.tex
+++ b/branches/mcxtrace_1_0/datablad_comp.tex
@@ -58,7 +58,7 @@ Telefax +45 4677 4013
 \regnummer{---}
 \projektnummer{---}
 \sider{\thepage}\tabeller{2}\figurer{15}\referencer{10}
-\resume{\input{abstract}}
-\deskriptorer{Neutron Instrumentation; Monte Carlo Simulation; Software}
+\resume{\input{abstract_common}}
+\deskriptorer{X-Ray  Instrumentation; Monte Carlo Simulation; Software}
 \end{datablad}
 
