--- a/branches/mcxtrace_1_0/preface.tex
+++ b/branches/mcxtrace_1_0/preface.tex
@@ -4,15 +4,15 @@
 \chapter*{Preface and acknowledgements}
 This document contains information on the Monte Carlo
 X-ray tracing program \MCX version \version, building on the initial
-release in October 1998 of the nuetron ray tracing program \MCS version 1.0 as presented in Ref.~\cite{nn_10_20}. The reader of this
+release in October 1998 of the nuetron ray tracing program \MCX version 1.0 as presented in Ref.~\cite{nn_10_20}. The reader of this
 document is expected to have some knowledge of X-ray and/or neutron scattering,
 whereas only little knowledge about simulation techniques is
 required. In a few places, we also assume familiarity with the
 use of the C programming language and UNIX/Linux.
 
-It is a pleasure to thank Prof.~Kurt N.~Clausen, PSI, for his continuous
-support to this project and for having initiated \MCS\ in the first
-place. 
+%It is a pleasure to thank Prof.~Kurt N.~Clausen, PSI, for his continuous
+%support to this project and for having initiated \MCX\ in the first
+%place. 
 Support has also been given by SAXLAB Aps. through its CEO Karsten Joensen as well 
 the ESRF and Max-LAB. We acknowledge all contributing parties. 
 
@@ -24,16 +24,18 @@ contact the authors at \verb+@risoe.dk+
 or consult the \MCX home page~\cite{mcxtrace_webpage}.
 A special bug/request reporting service is available \cite{mczilla_webpage}.
 
-If you {\bf appreciate} this software, please subscribe to the \verb+mcxtrace-users@mcxtrcae.org+ email list, send us a smiley message, and contribute to the package. We also encourage you to refer to this software when publishing results, with the following citations:
-\begin{itemize}
-\item{K. Lefmann and K. Nielsen, Neutron News {\bf 10/3}, 20, (1999).}
-\item{P. Willendrup, E. Farhi and K. Lefmann, Physica B, {\bf 350} (2004) 735.}
-\end{itemize}
+If you {\bf appreciate} this software, please subscribe to the \verb+mcxtrace-users@mcxtrace.org+ email list, send us a smiley message, and contribute to the package. 
+
+%We also encourage you to refer to this software when publishing results, with the following citations:
+%\begin{itemize}
+%\item{K. Lefmann and K. Nielsen, Neutron News {\bf 10/3}, 20, (1999).}
+%\item{P. Willendrup, E. Farhi and K. Lefmann, Physica B, {\bf 350} (2004) 735.}
+%\end{itemize}
 
 
-%\section*{\MCS\ \version\ contributors}
+%\section*{\MCX\ \version\ contributors}
 
-Third party software included in \MCX is:
+Third party software included in \MCX\ is:
 \begin{itemize}
 \item perl Math::Amoeba from John A.R. Williams \verb+J.A.R.Williams@aston.ac.uk+.
 \item perl Tk::Codetext from Hans Jeuken \verb+haje@toneel.demon.nl+.
@@ -41,7 +43,7 @@ Third party software included in \MCX is:
 \item and optionally PGPLOT from Tim Pearson \verb+tjp@astro.caltech.edu+.
 \end{itemize}
 
-The \MCX project is supported by Det Strategiske Forskningsråd through the NaBiIT programme. Partners in this joint venture are: 
+The \MCX\ project is supported by Det Strategiske Forskningsråd through the NaBiIT programme. Partners in this joint venture are: 
 \begin{itemize}
 \item Materials Research Division, Risø DTU, Roskilde, Denmark\\
 \item Niels Bohr Institute, University of Copenhagen, Denmark\\
